--- a/Assets/_Main/PhigrosSample.asmdef
+++ b/Assets/_Main/PhigrosSample.asmdef
@@ -2,7 +2,8 @@
     "name": "PhigrosSample",
     "rootNamespace": "Sparkfire.Sample",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:9de43d4bd5121964f9bb249ab5cc9f39"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
